[gd_scene load_steps=5 format=3 uid="uid://1r2d3lwajqyp"]

[ext_resource type="Script" path="res://Enemies/NormalizedDiagonalMove.gd" id="1_af3cv"]
[ext_resource type="Texture2D" uid="uid://c3flckni7e1qd" path="res://Enemies/Yenemy/yenemy-sprite.png" id="1_dwxek"]
[ext_resource type="Texture2D" uid="uid://b53dgikh114c7" path="res://Enemies/Yenemy/yenemy-spawning.png" id="3_vrqni"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_focwp"]
size = Vector2(16, 16)

[node name="Yenemy" type="RigidBody2D" groups=["enemies"]]
mass = 6.0
gravity_scale = 0.0
linear_damp = 4.0
script = ExtResource("1_af3cv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_dwxek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_focwp")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="SpawnSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_vrqni")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
